# adaptive-bybit-signal-bot

./: .env.example  .gitignore  AGENTS.md  Containerfile  Makefile  README.md  compose.recorder.yaml  compose.rest.yaml  compose.yaml  pyproject.toml
.codex/: config.toml
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codex/prompts/: review.md
.github/workflows/: ci.yml  codeql.yml  codex-review.yml
doc/spec/: 00_INDEX.md  01_v0.1_MVP_ORDER_INTENT_BOT.md  02_v0.2_INSTRUMENT_SPECS_PAPER_WS.md  03_v0.3_WS_SHADOW_BACKTEST.md  04_v0.4_FEAR_GREED_SENTIMENT.md  05_v0.5_PODMAN_COMPOSE_RUNTIME.md  06_v0.6_MARKET_RECORDER_REPLAY.md  07_CURRENT_ARCHITECTURE.md  08_NEXT_ROADMAP_V0.7_PLUS.md  09_CODEX_CLI_HANDOFF.md  10_ECC_CODEX_CONFIGURATION.md  10_SUPERPOWERS_CODEX_CONFIGURATION.md
docs/superpowers/plans/: 2026-06-23-replace-ecc-with-superpowers.md
docs/superpowers/specs/: 2026-06-23-replace-ecc-with-superpowers-design.md
openspec/: config.yaml
openspec/changes/align-runtime-config-contracts/: design.md  proposal.md
openspec/changes/remove-project-codex-config/: proposal.md  tasks.md
openspec/changes/replace-ecc-with-superpowers/: design.md  issue-draft.md  proposal.md  tasks.md
openspec/specs/production-governance/: spec.md
openspec/specs/runtime-deployment-consistency/: spec.md
openspec/specs/trading-safety-boundary/: spec.md
scripts/: compose-provider.sh  podman-compose-down.sh  podman-compose-logs.sh  podman-compose-up.sh
src/adaptive_bybit_bot/: __init__.py  cli.py  config.py  logging_config.py
src/adaptive_bybit_bot/api/: __init__.py  app.py
src/adaptive_bybit_bot/backtesting/: __init__.py  csv_io.py  engine.py  historical.py
src/adaptive_bybit_bot/data/: __init__.py  db.py  models.py  repositories.py
src/adaptive_bybit_bot/domain/: __init__.py  enums.py  models.py
src/adaptive_bybit_bot/exchange/: __init__.py  bybit_client.py  bybit_ws.py  signing.py
tests/: test_api_config_cli.py  test_backtesting.py  test_bybit_instruments.py  test_cli_smoke.py  test_db.py  test_exchange_client.py  test_feature_engine_more.py  test_historical_klines.py  test_indicators.py  test_instrument_spec.py  test_instruments.py  test_local_orderbook.py  test_maintenance.py  test_paper_trading.py  test_recording_replay.py  test_regime.py  test_repository.py  test_repository_more.py  test_runtime_contracts.py  test_sentiment.py  test_service_runtime.py  test_services.py  test_signing.py  test_strategy.py  test_strategy_more.py
(+44 files in other folders)
