[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "adaptive-bybit-signal-bot"
version = "0.3.0"
description = "Read-only Bybit spot signal bot that writes order intents to a database instead of placing orders."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OpenAI GPT generated" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "typer>=0.12",
  "rich>=13.7",
  "websockets>=12.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "psycopg[binary]>=3.2; platform_python_implementation == 'CPython'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
adaptive-bybit-bot = "adaptive_bybit_bot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_bybit_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
mypy_path = "src"
