[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "adaptive-bybit-signal-bot"
version = "0.6.0"
description = "Read-only Bybit spot signal bot that writes order intents to a database instead of placing orders."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "OpenAI GPT generated" }]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "SQLAlchemy>=2.0.51",
  "typer>=0.26.7",
  "rich>=15.0.0",
  "websockets>=16.0",
  "fastapi>=0.138.0",
  "uvicorn>=0.49.0",
  "psycopg[binary]>=3.3.4; platform_python_implementation == 'CPython'",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.18",
  "mypy>=2.1.0",
]

[project.scripts]
adaptive-bybit-bot = "adaptive_bybit_bot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_bybit_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_return_any = true
mypy_path = "src"
